MMA-8801: Oppdater VeraPdf
VeraPdf fra 1.28-1.30 ga noen feil som krevde litt opprydding.
Valideringen har blitt strengere slik at noe som gjorde at den ene testen feilet fordi VeraPdf ikke lenger så et dokument som en ugyldig PDFA på format 1b, men en ugyldig pdfa uten flavor at all.